# Py-Cpp-embedding

./: .gitignore  .gitmodules  Py-Cpp-emb.sln  README.md
Cpp2Py/: .gitignore  CMakeLists.txt  Compile.bat  Cpp2Py.sln  Cpp2Py.vcxproj  Cpp2Py.vcxproj.filters  Cpp2Py_Build.sln
Cpp2Py/CModule/: CModule.vcxproj  CModule.vcxproj.filters
Cpp2Py/CModule/src/core/: Cpp2Py.cpp  ModuleManager.cpp  support.h
Cpp2Py/CModule/src/modules/: Test.cpp  Test.h
Cpp2Py/CModule/src/modules/UI/: GuiManager.cpp  GuiManager.h
Cpp2Py/Demo/: Demo.py  Demo.pyproj
Cpp2Py/src/core/: Cpp2Py.cpp  Cpp2Py.h
Cpp2Py/src/modules/: Test.h
